src/test/ui/parser/recover-enum.stderr
error: missing separator `,`
  --> $DIR/recover-enum.rs:4:12
   |
LL |     enum Test {
   |               - while parsing the list starting here
LL |         Very
LL |         Bad(usize)
   |            ^ help: missing `,`

error: missing separator `,`
  --> $DIR/recover-enum.rs:6:14
   |
LL |     enum Test {
   |               - while parsing the list starting here
...
LL |         Stuff { a: usize }
   |              ^ help: missing `,`

error: missing separator `,`
  --> $DIR/recover-enum.rs:8:13
   |
LL |     enum Test {
   |               - while parsing the list starting here
...
LL |         Here
   |             ^ help: missing `,`

error: expected item, found `}`
  --> $DIR/recover-enum.rs:11:1
   |
LL | }
   | ^ expected item

error: aborting due to 4 previous errors

